@startuml Juander_Tourism_ER_Diagram_Chapter4

!theme plain
skinparam entity {
    BackgroundColor LightYellow
    BorderColor Black
    FontStyle bold
}
skinparam rectangle {
    BackgroundColor LightBlue
    BorderColor Black
}

entity "User" as user {
    * userID : ObjectId <<PK>>
    --
    firstName : String
    lastName : String
    profilePicture : String
    email : String
    password : String
    role : String
    isVerified : Boolean
    otp : String
    otpExpires : Date
    birthday : Date
    gender : String
    country : String
    language : String
    authProvider : String
    googleId : String
    profileCompleted : Boolean
    hideFortSantiagoModal : Boolean
    hasCompletedTour : Boolean
    tourCompletedAt : Date
}

entity "Admin" as admin {
    * adminID : ObjectId <<PK>>
    --
    adminName : String
    role : String
    email : String
}

entity "Itinerary" as itinerary {
    * itineraryID : ObjectId <<PK>>
    --
    name : String
    description : String
    imageUrl : String
    duration : Number
    sites : ObjectId[]
    createdBy : ObjectId <<FK>>
    isAdminCreated : Boolean
    isArchived : Boolean
}

entity "Pin" as pin {
    * pinID : ObjectId <<PK>>
    --
    siteName : String
    siteDescription : String
    siteDescriptionTagalog : String
    latitude : Number
    longitude : Number
    mediaUrl : String
    mediaType : String
    mediaFiles : Object[]
    arEnabled : Boolean
    arLink : String
    glbUrl : String
    facadeUrl : String
    feeType : String
    feeAmount : Number
    feeAmountDiscounted : Number
    category : ObjectId <<FK>>
    status : String
    inactiveReason : String
    isArchived : Boolean
}

entity "Category" as category {
    * categoryID : ObjectId <<PK>>
    --
    name : String
    createdAt : Date
}

entity "Review" as review {
    * reviewID : ObjectId <<PK>>
    --
    userId : ObjectId <<FK>>
    itineraryId : ObjectId <<FK>>
    siteId : ObjectId <<FK>>
    rating : Number
    reviewText : String
    photos : String[]
    createdAt : Date
}

entity "VisitedSite" as visitedsite {
    * visitedSiteID : ObjectId <<PK>>
    --
    userId : ObjectId <<FK>>
    itineraryId : ObjectId <<FK>>
    siteId : ObjectId <<FK>>
    visitedAt : Date
}

entity "ItineraryProgress" as progress {
    * progressID : ObjectId <<PK>>
    --
    userId : ObjectId <<FK>>
    itineraryId : ObjectId <<FK>>
    currentPinIndex : Number
    visitedSites : ObjectId[]
    skippedSites : ObjectId[]
    optimizedOrder : ObjectId[]
    lastPosition : Object
    lastUpdated : Date
}

entity "EmergencyContact" as emergency {
    * contactID : ObjectId <<PK>>
    --
    name : String
    contactChannels : Object[]
    position : Number
    icon : String
    isArchived : Boolean
}

entity "PhotoboothFilter" as photobooth {
    * filterID : ObjectId <<PK>>
    --
    name : String
    image : String
    category : String
    position : Number
    isArchived : Boolean
}

entity "Log" as logs {
    * logID : ObjectId <<PK>>
    --
    adminName : String
    action : String
    role : String
    targetType : String
    targetId : ObjectId
    details : Object
    createdAt : Date
}

entity "BotEntry" as botentry {
    * entryID : ObjectId <<PK>>
    --
    info_en : String
    info_fil : String
    tags : ObjectId[]
    keywords : String[]
    isArchived : Boolean
}

entity "Tag" as tag {
    * tagID : ObjectId <<PK>>
    --
    name : String
    createdAt : Date
}

entity "PendingUser" as pendinguser {
    * pendingUserID : ObjectId <<PK>>
    --
    firstName : String
    lastName : String
    email : String
    password : String
    otp : String
    otpExpires : Date
}

entity "Mask" as mask {
    * maskID : ObjectId <<PK>>
    --
    geometry : Object
    createdAt : Date
}

entity "Chatbot" as chatbot {
    * sessionID : String <<PK>>
    --
    userQuery : String
    response : String
    timestamp : Date
}

' Relationships with cardinality
admin ||--o{ user : "Manages"
admin ||--o{ pin : "Manages"
admin ||--o{ itinerary : "Manages"
admin ||--o{ emergency : "Manages"
admin ||--o{ photobooth : "Manages"
admin ||--o{ category : "Manages"
admin ||--o{ botentry : "Manages"
admin ||--o{ tag : "Manages"
admin ||--o{ mask : "Manages"
admin ||--o{ logs : "Creates"

user ||--o{ itinerary : "Creates"
user ||--o{ review : "Writes"
user ||--o{ visitedsite : "Has"
user ||--o{ progress : "Tracks"
user ||--o{ chatbot : "Uses"

itinerary }o--o{ pin : "Contains"
itinerary ||--o{ review : "Receives"
itinerary ||--o{ visitedsite : "Includes"
itinerary ||--o{ progress : "Has"

pin }o--|| category : "BelongsTo"
pin ||--o{ review : "Gets"
pin ||--o{ visitedsite : "VisitedAs"

botentry }o--o{ tag : "Uses"
chatbot ||--o{ botentry : "GetsKnowledgeFrom"

pendinguser ||--|| user : "BecomesAfterVerification"

@enduml
